@@ -1,6 +1,0 @@
-config BR2_PACKAGE_XPROTO_TRAPPROTO
-	bool "trapproto"
-	select BR2_PACKAGE_XLIB_LIBXT
-	help
-	  trapproto 3.4.3
-	  X.Org Trap protocol headers
