@@ -23,6 +23,8 @@
 	xlib_libpciaccess, xproto_dri2proto, xproto_eviext,
 	xproto_fontcacheproto, xproto_xf86miscproto, xserver_xorg-server
 
+	Removed packages: xapp_xtrap, xlib_libXTrap, xproto_trapproto
+
 	Issues resolved (http://bugs.uclibc.org):
 
 	#513: Add new squid package
